Add HTML boilerplate code.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,16 @@
-<h1>Long URL: <a href="{{ long_url }}">{{ long_url }}</a></h1>
-<h1>Short URL: <a href="{{ short_url }}">{{ short_url }}</a></h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Linkbelt</title>
+        <link rel="stylesheet" href="templates/normalize.css">
+        <link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+
+    <h1>Long URL: <a href="{{ long_url }}">{{ long_url }}</a></h1>
+    <h1>Short URL: <a href="{{ short_url }}">{{ short_url }}</a></h1>      
+      
+    </body>
+</html>
