--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,13 @@
         <title>Linkbelt</title>
         <link rel="stylesheet" href="templates/normalize.css">
         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+
+    <form>
+      
+    </form>
 
     <h1>Long URL: <a href="{{ long_url }}">{{ long_url }}</a></h1>
     <h1>Short URL: <a href="{{ short_url }}">{{ short_url }}</a></h1>      
