Remove drop shadow and change colors.

--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -25,7 +25,6 @@ form {
 }
 
 input[type="text"] {
-  background: rgba(255, 255, 255, 0.1);
   border: none;
   font-size: 16px;
   height: auto;
@@ -33,8 +32,7 @@ input[type="text"] {
   outline: 0;
   padding: 15px;
   width: 100%;
-  background-color: #e8eeef;
-  color: #8a97a0;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  background-color: #ecf0f1;
+  color: #2c3e50;
   margin-bottom: 30px;  
 }
