--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,24 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Linkbelt</title>
+        <meta name="description" content="linkbelt web application">
+        <meta name="author" content="Aditya Trivedi">
+        <title>Linkbelt</title>  
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
+    
+    <form>
+      
+      <h1 class="form-title">Linkbelt</h1>
+      
+      <input type="text" id="text_field" name="short_url"/>
+      <input type="text" id="text_field" name="long_url"/>
+      <button type="process">process</button>
+          
+    </form>
     
     <h1>Long URL: <a href="{{ long_url }}">{{ long_url }}</a></h1>
     <h1>Short URL: <a href="{{ short_url }}">{{ short_url }}</a></h1>      
