change button type to submit.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       
       <input type="text" id="text_field" name="short_url"/>
       <input type="text" id="text_field" name="long_url"/>
-      <button type="process">process</button>
+      <button type="submit">process</button>
           
     </form>
     
