--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
       
       <h1 class="form-title">Linkbelt</h1>
       
-      <input type="text" id="text_field" name="short_url"/>
-      <input type="text" id="text_field" name="long_url"/>
+      <input type="text" id="text_field" name="short_url" placeholder="full link"/>
+      <input type="text" id="text_field" name="long_url" placeholder="short url"/>
       <button type="submit">process</button>
           
     </form>
