Restucture folder structure.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="linkbelt web application">
         <meta name="author" content="Aditya Trivedi">
         <title>Linkbelt</title>  
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="/static/normalize.css">
+        <link rel="stylesheet" href="/static/styles.css">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -22,8 +22,8 @@
           
     </form>
     
-    <h1>Long URL: <a href="{{ long_url }}">{{ long_url }}</a></h1>
-    <h1>Short URL: <a href="{{ short_url }}">{{ short_url }}</a></h1>      
+<!--    <h1>Long URL: <a href="{{ long_url }}">{{ long_url }}</a></h1>
+    <h1>Short URL: <a href="{{ short_url }}">{{ short_url }}</a></h1>      -->
       
     </body>
 </html>
