--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="linkbelt web application">
         <meta name="author" content="Aditya Trivedi">
         <title>Linkbelt</title>  
-        <link rel="stylesheet" href="/static/normalize.css">
-        <link rel="stylesheet" href="/static/styles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='normalize.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
